<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/calculatorInputView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textSize="28sp"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculatorInputView" />

    <GridLayout
        android:id="@+id/keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowOrderPreserved="true"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result">

        <Button
            android:id="@+id/clear_btn"
            style="@style/TextAppearance.App.Button.Clear"
            android:layout_column="0"
            android:text="@string/clear" />

        <Button
            android:id="@+id/deleteBtn"
            style="@style/TextAppearance.App.Button.Clear"
            android:layout_column="3"
            android:padding="4dp"
            android:text="@string/deleteBtn" />

        <Button
            android:id="@+id/percent"
            android:text="@string/percent" />

        <Button
            android:id="@+id/caret"
            android:text="@string/caret" />

        <Button
            android:id="@+id/leftBracket"
            android:text="@string/leftBracket" />

        <Button
            android:id="@+id/rightBracket"
            android:text="@string/rightBracket" />

        <Button
            android:id="@+id/one"
            android:text="@string/_1" />

        <Button
            android:id="@+id/two"
            android:text="@string/_2" />

        <Button
            android:id="@+id/three"
            android:text="@string/_3" />

        <Button
            android:id="@+id/asterisk"
            android:text="@string/star" />

        <Button
            android:id="@+id/four"
            android:text="@string/_4" />

        <Button
            android:id="@+id/five"
            android:text="@string/_5" />

        <Button
            android:id="@+id/six"
            android:text="@string/_6" />

        <Button
            android:id="@+id/minus"
            android:text="@string/minus" />

        <Button
            android:id="@+id/seven"
            android:text="@string/_7" />

        <Button
            android:id="@+id/eight"
            android:text="@string/_8" />

        <Button
            android:id="@+id/nine"
            android:text="@string/_9" />

        <Button
            android:id="@+id/devide"
            android:text="@string/divide" />

        <Button
            android:id="@+id/dot"
            android:text="@string/dot" />

        <Button
            android:id="@+id/zero"
            android:text="@string/_0" />

        <Button
            android:id="@+id/equals"
            android:text="@string/equals" />

        <Button
            android:id="@+id/plus"
            android:text="@string/plus" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>